--- a/Tune-Crafter-Webapp/package.json
+++ b/Tune-Crafter-Webapp/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@mediapipe/tasks-vision": "^0.10.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
