--- a/Tune-Crafter-Webapp/package.json
+++ b/Tune-Crafter-Webapp/package.json
@@ -2,7 +2,7 @@
   "name": "tune-crafter-webapp",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start:dev": "npx nodemon"
@@ -15,5 +15,8 @@
     "nodemon": "^3.0.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
+  },
+  "dependencies": {
+    "@mediapipe/tasks-vision": "^0.10.6"
   }
 }
