--- a/Tune-Crafter-Webapp/package.json
+++ b/Tune-Crafter-Webapp/package.json
@@ -2,7 +2,7 @@
   "name": "tune-crafter-webapp",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -10,6 +10,6 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@mediapipe/tasks-vision": "^0.10.6"
+    
   }
 }
