First protorype in Tune-Crafter-React-Webapp

--- a/Tune-Crafter-React-WebApp/tsconfig.json
+++ b/Tune-Crafter-React-WebApp/tsconfig.json
@@ -5,6 +5,8 @@
     "lib": ["ES2020", "DOM", "DOM.Iterable"],
     "module": "ESNext",
     "skipLibCheck": true,
+    "jsx": "react",
+    "esModuleInterop": true,
 
     /* Bundler mode */
     "moduleResolution": "bundler",
@@ -12,7 +14,7 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react-jsx",
+    //"jsx": "react-jsx",
 
     /* Linting */
     "strict": true,
