--- a/package.json
+++ b/package.json
@@ -11,10 +11,16 @@
   },
   "dependencies": {
     "@mediapipe/tasks-vision": "^0.10.6",
+    "@popperjs/core": "^2.11.8",
+    "@types/wavesurfer.js": "^6.0.7",
+    "bootstrap": "^5.3.2",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-bootstrap": "^2.9.0",
+    "react-dom": "^18.2.0",
+    "wavesurfer-react": "^2.2.3"
   },
   "devDependencies": {
+    "@types/bootstrap": "^5.2.7",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
@@ -23,6 +29,7 @@
     "eslint": "^8.45.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
+    "sass": "^1.68.0",
     "typescript": "^5.0.2",
     "vite": "^4.4.5"
   }
