--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.0",
     "react-dom": "^18.2.0",
+    "socket.io": "^4.7.2",
+    "socket.io-client": "^4.7.2",
     "wavesurfer-react": "^2.2.3"
   },
   "devDependencies": {
