--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
   "name": "tune-crafter-react-webapp",
   "private": true,
-  "version": "0.0.0",
+  "version": "0.1.0",
+  "homepage": "https://scavalleroo.github.io/Tune-Crafter",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "socket-server": "python3.10 ./src/server/SocketServer.py",
     "socket-server-win": "python ./src/server/SocketServer.py",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
