--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
+    "deploy": "gh-pages -d dist",
     "socket-server": "python3.10 ./src/server/SocketServer.py",
     "socket-server-win": "python ./src/server/SocketServer.py",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
