--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-bootstrap": "^2.9.0",
     "react-dom": "^18.2.0",
     "react-ga": "^3.3.1",
+    "react-ga4": "^2.1.0",
     "react-icons": "^4.11.0",
     "socket.io-client": "^4.7.2",
     "wavesurfer-react": "^2.2.3"
